Fix: Update MDX affiliate link to ClickBank URL

--- a/content/reviews/sumatra-slim-belly-tonic.mdx
+++ b/content/reviews/sumatra-slim-belly-tonic.mdx
@@ -16,7 +16,7 @@ cons:
   - "Only available on official website"
   - "Results may vary between individuals"
   - "Premium pricing compared to basic supplements"
-affiliateUrl: "#affiliate-link"
+affiliateUrl: "https://8a315svzv0-apy7h6ell37s695.hop.clickbank.net"
 publishedAt: "2026-01-15"
 ---
 
