Add ProstaVive product image

--- a/content/reviews/prostavive-review.mdx
+++ b/content/reviews/prostavive-review.mdx
@@ -2,7 +2,7 @@
 title: "ProstaVive Review (2025): Is This Powder the Ultimate Prostate Health Solution?"
 slug: prostavive-review
 excerpt: "Struggling with weak flow or sleepless nights? We analyze the science behind the 'Nitric Oxide' prostate breakthrough."
-thumbnail: "https://images.unsplash.com/photo-1576086213369-97a306d36557?w=800&q=80"
+thumbnail: "/images/products/prostavive.png"
 rating: 4.7
 videoId: ""
 verdict: "recommended"
