--- a/content/reviews/mitolyn-review.mdx
+++ b/content/reviews/mitolyn-review.mdx
@@ -4,7 +4,7 @@ slug: mitolyn-review
 excerpt: "Can boosting your 'cellular engines' really melt fat? We analyze the Harvard study behind Mitolyn and the results."
 thumbnail: "https://images.unsplash.com/photo-1559757175-5700dde675bc?w=800&q=80"
 rating: 4.9
-videoId: ""
+videoId: "O4MVTh3ZUk4"
 verdict: "recommended"
 pros:
   - "90-Day Money-Back Guarantee (Generous)"
