Add YouTube video IDs to 8 reviews

--- a/content/reviews/citrusburn-review.mdx
+++ b/content/reviews/citrusburn-review.mdx
@@ -2,9 +2,9 @@
 title: "CitrusBurn Reviews (2025): Metabolic Breakthrough or Just Hype?"
 slug: citrusburn-review
 excerpt: "Can a simple citrus extract really wake up a dormant metabolism? We investigated the ingredients, the science, and the results."
-thumbnail: "https://images.unsplash.com/photo-1582979512210-99b6a53386f9?w=800&q=80"
+thumbnail: "/images/products/citrusburn.png"
 rating: 4.8
-videoId: ""
+videoId: "q-sIJVR7QiI"
 verdict: "recommended"
 pros:
   - "100% Natural ingredients (Non-GMO)"
