--- a/content/reviews/last-wish-review.mdx
+++ b/content/reviews/last-wish-review.mdx
@@ -2,7 +2,7 @@
 title: "The 'Third Eye' Connection: How Decalcifying Your Pineal Gland Can Boost Your Health & Abundance"
 slug: last-wish-review
 excerpt: "Is a tiny organ in your brain the key to better sleep and financial freedom? We investigate the science of Pineal Gland calcification and 'The Last Wish' protocol."
-thumbnail: "https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&q=80"
+thumbnail: "/images/products/last-wish.png"
 rating: 4.6
 videoId: ""
 verdict: "recommended"
