--- a/content/reviews/prodentim-review.mdx
+++ b/content/reviews/prodentim-review.mdx
@@ -2,9 +2,9 @@
 title: "ProDentim Review 2026: Does This Probiotic Candy Really Fix Teeth & Gums?"
 slug: prodentim-review
 excerpt: "We analyze the 'Good Bacteria' theory. Can a simple candy reverse gum damage and bad breath? Read the investigation."
-thumbnail: "https://images.unsplash.com/photo-1606811841689-23dfddce3e95?w=800&q=80"
+thumbnail: "/images/products/prodentim.png"
 rating: 4.8
-videoId: ""
+videoId: "OSl59x940PY"
 verdict: "recommended"
 pros:
   - "Easy to Use: It's a tasty candy, not a pill"
