--- a/content/reviews/prostavive-review.mdx
+++ b/content/reviews/prostavive-review.mdx
@@ -4,7 +4,7 @@ slug: prostavive-review
 excerpt: "Struggling with weak flow or sleepless nights? We analyze the science behind the 'Nitric Oxide' prostate breakthrough."
 thumbnail: "/images/products/prostavive.png"
 rating: 4.7
-videoId: ""
+videoId: "3ctetxKXKRU"
 verdict: "recommended"
 pros:
   - "Easy-to-Take Powder (No massive pills)"
