--- a/content/reviews/smoothie-diet-review.mdx
+++ b/content/reviews/smoothie-diet-review.mdx
@@ -2,9 +2,9 @@
 title: "The Smoothie Diet Review: Can You Really Lose Weight in Just 21 Days?"
 slug: smoothie-diet-review
 excerpt: "Discover how The Smoothie Diet 21-Day Program helps you lose weight rapidly, boost energy, and reset your health. Read our full review."
-thumbnail: "https://images.unsplash.com/photo-1505576399279-565b52d4ac71?w=800&q=80"
+thumbnail: "https://images.unsplash.com/photo-1502741224143-90386d7f8c82?w=800&q=80"
 rating: 4.7
-videoId: "M3Pb3gt_qio"
+videoId: "MH0RX4dWBqQ"
 verdict: "recommended"
 pros:
   - "Instant Access: Digital download, start immediately"
