Add video to Quartz Powder Water Flosser review

--- a/content/reviews/quartz-powder-water-flosser-review.mdx
+++ b/content/reviews/quartz-powder-water-flosser-review.mdx
@@ -4,7 +4,7 @@ slug: quartz-powder-water-flosser-review
 excerpt: "We test the viral Temu 'Quartz Powder' portable water flosser. Can a budget gadget really replace your $80 Waterpik? Here's our honest verdict."
 thumbnail: "https://images.unsplash.com/photo-1609840114035-3c981b782dfe?w=800&q=80"
 rating: 4.0
-videoId: ""
+videoId: "AmRdtutgX5s"
 verdict: "recommended"
 pros:
   - "Unbeatable Price: Costs a fraction of big-name competitors like Waterpik"
