--- a/content/reviews/dhovtcy-shiatsu-foot-massager-review.mdx
+++ b/content/reviews/dhovtcy-shiatsu-foot-massager-review.mdx
@@ -4,7 +4,7 @@ slug: dhovtcy-shiatsu-foot-massager-review
 excerpt: "We tested the DHovtcy Electric Shiatsu Foot Massager for 30 days. Deep-kneading nodes, adjustable heat, and fits up to Size 13. Here's our honest verdict."
 thumbnail: "https://images.unsplash.com/photo-1519824145371-296894a0daa9?w=800&q=80"
 rating: 4.5
-videoId: ""
+videoId: "ssOTNCAmDig"
 verdict: "recommended"
 pros:
   - "Deep-Kneading Shiatsu: Mimics the hands of a skilled masseuse"
